--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "author": "fanwenxiang",
   "license": "ISC",
-  "homepage": "",
+  "homepage": "https://github.com/chenshuideshizi/better-swiper.git",
   "repository": {
     "type": "git",
-    "url": "https://github.com/nolimits4web/Swiper.git"
+    "url": "https://github.com/chenshuideshizi/better-swiper.git"
   }
 }
