--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./dist/better-swiper.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "rollup": "rollup -c ./build/rollup.config.js -w"
+    "dev": "rollup -c ./build/rollup.config.js -w",
+    "build": "rollup -c ./build/rollup.config.js"
   },
   "author": "fanwenxiang",
   "license": "ISC",
